# lefthk

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  ßrite
.github/workflows/: ci.yml  release.yml
lefthk/: Cargo.toml
lefthk-core/: Cargo.toml
lefthk-core/src/: ]  child.rs  config.rs  errors.rs  evdev.rs  ipc.rs  keysym_lookup.rs  lib.rs  tests.rs  worker.rs  xkeysym_lookup.rs  xwrap.rs
lefthk-core/src/config/: command.rs  keybind.rs  mod.rs
lefthk-core/src/config/command/: chord.rs  error.rs  execute.rs  exit_chord.rs  kill.rs  mod.rs  normalized_command.rs  reload.rs
lefthk-core/src/config/command/utils/: denormalize_function.rs  error.rs  mod.rs  normalized_command.rs
lefthk-core/src/worker/: mod.rs
lefthk-core/src/worker/context/: chord.rs  kill.rs  mod.rs  reload.rs
lefthk/src/: config.rs  errors.rs  main.rs  tests.rs
lefthk/src/config/: command.rs  key.rs  keybind.rs  mod.rs
src/: config.rs  errors.rs  ipc.rs  main.rs  tests.rs  worker.rs  xkeysym_lookup.rs  xwrap.rs
