[package]
name = "lefthk-core"
version = "0.2.1"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/leftwm/lefthk"
description = "A hotkey daemon for Adventurers"

[dependencies]
evdev = { version = "0.12.1", features = ["tokio"] }
mio = "0.8.11"
nix = { version = "0.27.1", features = ["fs", "signal"] }
signal-hook = "0.3.4"
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time",
] }
udev = {version = "0.8.0", features = ["mio"] }
xdg = "2.4.0"
ron = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
inventory = "0.3.2"

# logging
tracing = "0.1.36"

[dev-dependencies]
tempfile = "3.2.0"
