[package]
name = "lefthk-core"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.0" # MSRV MINIMUM SUPPORTED RUST VERSION
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/leftwm/lefthk"
description = "A hotkey daemon for Adventurers"

[dependencies]
mio = "1.0.2"
nix = {version = "0.30.1", features = ["fs", "signal"]}
signal-hook = "0.3.4"
thiserror = "2.0.12"
tokio = { version = "1.14.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
x11-dl = "2.19.1"
xdg = "3.0.0"
ron = "0.11.0"
serde = { version = "1.0.145", features= ["derive"]}
inventory = "0.3.2"

# logging
tracing = "0.1.36"

[dev-dependencies]
tempfile = "3.2.0"
