[package]
name = "lefthk"
version = "0.1.8"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/leftwm/lefthk"
description = "A hotkey daemon for Adventurers"

[dependencies]
clap = {version = "3.2.20", features = ["cargo"]}
lefthk-core = { path = "../lefthk-core", version = '0.1' }
pretty_env_logger = "0.4.0"
ron = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
xdg = "2.4.0"

# logging
tracing = "0.1.36"

[dev-dependencies]
tempfile = "3.2.0"
